@@ -65,7 +65,8 @@ e.g. @code{\\tag #'part ...} could tag a piece of music as only being active in 
      (inversion ,boolean? "If set, this chord note is inverted.")
      (label ,markup? "label of a mark.")
      (last-pitch ,ly:pitch? "The last pitch after relativization.")
-     (length ,procedure? "How to compute the duration of this music")
+     (length ,ly:moment? "The duration of this music")
+     (length-callback ,procedure? "How to compute the duration of this music")
      (internal-class-name ,string? "C++ class to use for this Music object") 
      (name ,symbol? "Name of this music object")
      (numerator ,integer? "numerator of a time signature")
